apps/web-demo/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-demo
  namespace: web-demo
spec:
  selector:
    app: web-demo

  ports:
    - port: 80
      targetPort: 80

  type: ClusterIP
