apps/web-demo/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-demo
  namespace: app-demo
spec:
  ingressClassName: nginx

  rules:
    - host: app-demo.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app-demo
                port:
                  number: 80
